# active-contours

./: .gitignore  CMakeLists.txt  README.md
include/: RunParams.h  Runner.h  contour.h  snake.h
include/examples/: base.h
src/: CMakeLists.txt  RunParams.cpp  Runner.cpp  contour.cpp  display.cpp  display.h  main.cpp  snake.cpp
src/examples/: base.cpp  colorcam.cpp  depthcam.cpp  image.cpp
src/segmentation/: metrics.py  preparation.py  processor.py
